# cmake_template

./: .gitignore  CMakeLists.txt  README.md  taheri_readme.txt
cmake_template1/: myclean.bat
cmake_template1/hello_world_app/src/: helper.cpp  helper.h
cmake_template1/test_lib/src/: lib_helper.h
cmake_template2/: CMakeLists.txt
cmake_template2/src/: helper.cpp  helper.h  main.cpp
hello_world_app/: CMakeLists.txt
hello_world_app/src/: define_cross_compile.h  main.cpp
test_lib/: CMakeLists.txt
test_lib/src/: lib_helper.cpp
